--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -6,40 +6,60 @@
     background-color: #f8f9fa;
     height: 100vh;
     font-family: 'Arial', sans-serif;
+    color: #434D65;
   }
   
   .top-bar {
     display: flex;
     align-items: center;
     width: 100%;
-    background-color: #007bff;
+    background-color: #1D93F3;
     padding: 10px;
-    color: white;
+    padding-left: 20px;
+    padding-right: 20px;
   }
   
   .menu-icon, .mic-icon {
     background: none;
     border: none;
-    color: white;
     font-size: 1.5rem;
   }
   
   .search-input {
-    flex-grow: 1;
-    margin: 0 10px;
-    padding: 5px;
+    width: 100%;
+    padding: 8px;
+    font-family: 'SF Pro Text', sans-serif;
+    font-size: 16px;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
+    outline: none;
+    background-color: #F2F2F2;
+  }
+
+  .search-btn {
+    background: none;
+    border: none;
+    margin-left: 10px;
+    color: white;
   }
   
   .word-section {
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 20px;
   }
   
   .word {
+    font-family: 'Gilroy-Bold', sans-serif;
     font-size: 2.5rem;
     font-weight: bold;
+  }
+
+  .word-category {
+    font-family: 'Inter', sans-serif;
+    font-weight: bold;
+    font-size: 1.5rem;
+    margin-bottom: 10px;
   }
   
   .word-icons {
@@ -67,7 +87,6 @@
   
   .definition-section p {
     font-size: 1.2rem;
-    font-weight: bold;
   }
   
   .definition-section ul {
@@ -96,13 +115,16 @@
   .link-btn {
     background: none;
     border: none;
-    color: blue;
+    color: #1D93F3;
     padding: 0;
     margin: 0;
   }
-
-  .search-btn {
+  
+  .link-btn-syn {
     background: none;
     border: none;
-    color: white;
+    color: #1D93F3;
+    padding: 0;
+    margin: 0;
+    font-weight: bold;
   }
