--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -46,6 +46,12 @@
   .word-section {
     text-align: center;
     margin-top: 20px;
+    margin-bottom: 30px;
+  }
+  
+  .word-section-det {
+    text-align: center;
+    margin-top: 10px;
     margin-bottom: 20px;
   }
   
@@ -60,6 +66,7 @@
     font-weight: bold;
     font-size: 1.5rem;
     margin-bottom: 10px;
+    text-transform: capitalize;
   }
   
   .word-icons {
@@ -73,30 +80,27 @@
     margin: 0 10px;
     cursor: pointer;
   }
+
+  .audio{
+    color: #1D93F3;
+    cursor: pointer;
+    margin-left: 10px;
+  }
   
   .word-pronunciation {
     font-size: 1.2rem;
     color: gray;
   }
   
-  .definition-section {
+  .synonyms {
     text-align: left;
     margin: 20px 0;
     width: 100%;
-  }
-  
-  .definition-section p {
     font-size: 1.2rem;
   }
   
-  .definition-section ul {
-    list-style: none;
-    padding-left: 10px;
-  }
-  
-  .definition-section li {
-    margin-bottom: 10px;
-    font-size: 1rem;
+  .link-btn-syn:hover {
+    text-decoration: underline;
   }
   
   .floating-btn {
@@ -120,6 +124,10 @@
     margin: 0;
   }
   
+  .link-btn:hover {
+    text-decoration: underline;
+  }
+  
   .link-btn-syn {
     background: none;
     border: none;
@@ -127,4 +135,42 @@
     padding: 0;
     margin: 0;
     font-weight: bold;
+  }
+
+  .link-btn-syn:hover {
+    text-decoration: underline;
+  }
+
+  .pos-p{
+    margin-bottom: 0.8rem;
+  }
+
+  .def-block{
+    margin-top: 20px;
+    font-size: 1.2rem;
+  }
+
+  .definition-row {
+    display: flex;
+    align-items: flex-start;
+  }
+
+  .number {
+    margin-right: 10px;
+    flex-shrink: 0;
+  }
+
+  .def{
+    display: block; 
+  }
+
+  .def-text {
+    margin: 0;
+    padding-left: 0;
+  }
+
+  .line-break {
+    width: 100%;
+    border-bottom: 1px solid #D5DEE8;
+    margin-left: -20px;
   }
