--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,12 @@
+<header class="top-bar">
+  <input type="text" class="form-control search-input" placeholder="Search a word" [(ngModel)]="word"
+    (keyup.enter)="searchWord()" />
 
-  <div class="top-bar">  
-    <input
-      type="text"
-      class="form-control search-input"
-      placeholder="Search a word"
-      [(ngModel)]="word"
-      (keyup.enter)="searchWord()"
-    />
-  
-    <button (click)="searchWord()" class="search-btn">
-      <i class="fa fa-search"></i>
-    </button>
-  </div>
-  <div class="app-container">
+  <button (click)="searchWord()" class="search-btn">
+    <i class="fa fa-search"></i>
+  </button>
+</header>
+<div class="app-container">
 
   <div *ngIf="wordDetails" class="word-section">
     <h1 class="word">{{ wordDetails[0].word }}</h1>
@@ -20,39 +14,50 @@
       <i class="fa fa-heart"></i>
     </div>
   </div>
-  <div *ngIf="wordDetails" class="word-section">
+  <div class="line-break"></div>
+  <div *ngIf="wordDetails" class="word-section-det">
     <span class="word-category">{{ wordDetails[0].meanings[0].partOfSpeech }}</span>
     <p class="word-pronunciation">
       {{ wordDetails[0].phonetics[0]?.text }}
-      <audio *ngIf="wordDetails[0].phonetics[0]?.audio" controls [src]="wordDetails[0].phonetics[0]?.audio"></audio>
+      <span *ngIf="wordDetails[0].phonetics[0]?.audio" class="audio">
+        <i class="fa fa-volume-up" (click)="playAudio()"></i>
+      </span>
+      <audio #audioPlayer [src]="wordDetails[0].phonetics[0]?.audio"></audio>
     </p>
   </div>
 
-  <div *ngIf="wordDetails" class="definition-section">
-    <p>Synonyms: 
-      <span *ngFor="let detail of wordDetails">
-        <span *ngFor="let meaning of detail.meanings">
+  <div *ngIf="wordDetails" class="synonyms">
+    <p *ngIf="hasSynonyms()">Synonyms:
+      <span *ngFor="let detail of wordDetails; let isLast3 = last; let j = index">
+        <span *ngFor="let meaning of detail.meanings; let isLast2 = last; let i = index">
           <span *ngFor="let synonym of meaning.synonyms; let isLast = last">
-            <button class="link-btn-syn" (click)="searchWord(synonym)">{{ synonym }}</button>
+            <button class="link-btn" (click)="searchWord(synonym)">{{ synonym }}</button>
             <span *ngIf="!isLast">, </span>
           </span>
+          <span *ngIf="!isLast2 && meaning.synonyms!='' && detail.meanings[i+1].synonyms!=''">, </span>
+          <span *ngIf="isLast2 && !isLast3 && wordDetails[j+1].meanings[0].synonyms!=''">, </span>
         </span>
       </span>
     </p>
-    <div *ngFor="let detail of wordDetails">
-      <div *ngFor="let meaning of detail.meanings">
-        <p>
+    <div *ngFor="let detail of wordDetails; let i = index">
+      <div *ngFor="let meaning of detail.meanings; let j = index" class="def-block">
+        <p class="pos-p">
           <button class="link-btn" (click)="searchWord(meaning.partOfSpeech)">{{ meaning.partOfSpeech }}</button>
         </p>
-        <span *ngFor="let synonym of meaning.synonyms; let isLast = last">
-          <button class="link-btn-syn" (click)="searchWord(synonym)">{{ synonym }}</button>
-          <span *ngIf="!isLast">, </span>
-        </span>
-        <ul>
-          <li *ngFor="let definition of meaning.definitions">
-            {{ definition.definition }}
-          </li>
-        </ul>
+        <div class="definition-row">
+          <span class="number">{{getIndex(i, j)}}.</span>
+          <div class="def">
+            <span *ngFor="let synonym of meaning.synonyms; let isLast = last">
+              <button class="link-btn-syn" (click)="searchWord(synonym)">{{ synonym }}</button>
+              <span *ngIf="!isLast">, </span>
+            </span>
+            <p class="def-text">
+              <span *ngFor="let definition of meaning.definitions">
+                {{ definition.definition }}
+              </span>
+            </p>
+          </div>
+        </div>
       </div>
     </div>
   </div>
