--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -93,7 +93,7 @@
       <i class="fa fa-user"></i>
     </button>
   </div>
-  <button class="floating-btn4" (click)="darkMod()">
+  <button class="floating-btn4" (click)="toggleDarkTheme()">
     <i class="fa fa-sun"></i>
   </button>
 </div>
