--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -3,17 +3,17 @@
   flex-direction: column;
   align-items: center;
   padding: 20px;
-  background-color: #f8f9fa;
+  background-color: var(--bkg-color);
   height: 100vh;
   font-family: 'Arial', sans-serif;
-  color: #434D65;
+  color: var(--text-color);
 }
 
 .top-bar {
   display: flex;
   align-items: center;
   width: 100%;
-  background-color: #1D93F3;
+  background-color: var(--theme-color);
   padding: 10px;
   padding-left: 20px;
   padding-right: 20px;
@@ -34,14 +34,20 @@
   border: none;
   border-radius: 8px;
   outline: none;
-  background-color: #F2F2F2;
+  color: var(--text-color);
+  background-color: var(--search-bg);
+}
+
+.search-input::placeholder {
+  color: var(--search-text);
+  opacity: 1;
 }
 
 .search-btn {
   background: none;
   border: none;
   margin-left: 10px;
-  color: white;
+  color: var(--btn-color);
 }
 
 .word-section {
@@ -149,8 +155,8 @@
   position: fixed;
   top: 80px;
   right: 20px;
-  background-color: #007bff;
-  color: white;
+  background-color: var(--btn-bg-color);
+  color: var(--btn-color);
   border: none;
   border-radius: 50%;
   padding: 15px;
@@ -162,8 +168,8 @@
   position: fixed;
   top: 150px;
   right: 20px;
-  background-color: #007bff;
-  color: white;
+  background-color: var(--btn-bg-color);
+  color: var(--btn-color);
   border: none;
   border-radius: 50%;
   padding: 15px;
@@ -175,8 +181,8 @@
   position: fixed;
   top: 220px;
   right: 20px;
-  background-color: #007bff;
-  color: white;
+  background-color: var(--btn-bg-color);
+  color: var(--btn-color);
   border: none;
   border-radius: 50%;
   padding: 15px;
@@ -188,8 +194,8 @@
   position: fixed;
   top: 290px;
   right: 20px;
-  background-color: #007bff;
-  color: white;
+  background-color: var(--btn-bg-color);
+  color: var(--btn-color);
   border: none;
   border-radius: 50%;
   padding: 15px;
@@ -200,7 +206,7 @@
 .link-btn {
   background: none;
   border: none;
-  color: #1D93F3;
+  color: var(--theme-color);
   padding: 0;
   margin: 0;
 }
