--- a/src/app/favorites/favorites.component.html
+++ b/src/app/favorites/favorites.component.html
@@ -1,7 +1,8 @@
 <h2 class="page-title">Favorites</h2>
-<div *ngFor="let item of favorites; let i = index" class="favorite-item">
+<div *ngFor="let item of favorites; let i = index" class="favorite-item" style="cursor: pointer" (click)="navigateToWord(item)">
   <span>{{ item }}</span>
-  <i class="fa fa-trash" (click)="confirmRemoval(item, i)" style="cursor: pointer; color: red;"></i>
+  <i class="fa fa-trash" 
+     (click)="confirmRemoval(item, i); $event.stopImmediatePropagation()" style="cursor: pointer; color: red;"></i>
 </div>
 <div *ngIf="showToast" class="toast show align-items-center text-bg-danger border-0" style="position: fixed; top: 20px; right: 20px;">
   <div class="d-flex">
