--- a/src/app/favorites/favorites.component.css
+++ b/src/app/favorites/favorites.component.css
@@ -9,18 +9,22 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 16px 20px;
   border-radius: 8px;
   background-color: var(--favorite-bg);
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   transition: transform 0.2s;
   border-bottom: 1px solid var(--favorite-border);
-  width: 80vw;
   margin-bottom: 15px;
+}
+
+.fitem {
+  padding: 16px 0 16px 20px;
+  width: 75vw;
 }
 
 .favorite-item i {
   font-size: 1.2em;
+  padding: 16px 20px 16px 16px;
 }
 
 .favorite-item:hover {
